music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-service
  namespace: music-assistant
spec:
  type: NodePort
  selector:
    app: music-assistant
  ports:
    - port: 8095
      targetPort: 8095
      name: music-assistant-web
